{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 13,
  "lineage": "04221d91-d650-67d2-44ec-4e1bc5704094",
  "resources": [
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07ab3f23ef150249a",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-246-117-230.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.117.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848607490931:internet-gateway/igw-01a0362c01873cf64",
            "id": "igw-01a0362c01873cf64",
            "owner_id": "848607490931",
            "vpc_id": "vpc-014507b01d77faed1"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ab3f23ef150249a",
            "id": "nat-012edfbf52c6893e9",
            "network_interface_id": "eni-0b86c21ee78e4bc83",
            "private_ip": "10.0.1.34",
            "public_ip": "34.246.117.230",
            "subnet_id": "subnet-0d16e0b6407d30842"
          },
          "dependencies": [
            "module.vpc_networking.aws_eip.nat_eip",
            "module.vpc_networking.aws_subnet.alpha_pub_subnet",
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01a0362c01873cf64",
            "id": "r-rtb-0b94fc9d2af7ecb5c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b94fc9d2af7ecb5c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_networking.aws_internet_gateway.internet_gw",
            "module.vpc_networking.aws_route_table.alpha_public_rt",
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0487d7c45287b687a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012edfbf52c6893e9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0487d7c45287b687a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_networking.aws_eip.nat_eip",
            "module.vpc_networking.aws_nat_gateway.nat_gw",
            "module.vpc_networking.aws_route_table.alpha_private_rt",
            "module.vpc_networking.aws_subnet.alpha_pub_subnet",
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alpha_private_rt",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0487d7c45287b687a",
            "owner_id": "848607490931",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-014507b01d77faed1"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alpha_public_rt",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b94fc9d2af7ecb5c",
            "owner_id": "848607490931",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-014507b01d77faed1"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d77396aeedbc7c3",
            "route_table_id": "rtb-0487d7c45287b687a",
            "subnet_id": "subnet-0f1978b0c683b4b8f"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.alpha_private_rt",
            "module.vpc_networking.aws_subnet.alpha_prv_subnet",
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038a052df27cf3dbd",
            "route_table_id": "rtb-0b94fc9d2af7ecb5c",
            "subnet_id": "subnet-0d16e0b6407d30842"
          },
          "dependencies": [
            "module.vpc_networking.aws_route_table.alpha_public_rt",
            "module.vpc_networking.aws_subnet.alpha_pub_subnet",
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alpha_prv_subnet",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848607490931:subnet/subnet-0f1978b0c683b4b8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f1978b0c683b4b8f",
            "map_public_ip_on_launch": false,
            "owner_id": "848607490931",
            "tags": {
              "Name": "alpha_prv_subnet",
              "Provisioner": "terraform"
            },
            "vpc_id": "vpc-014507b01d77faed1"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alpha_pub_subnet",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848607490931:subnet/subnet-0d16e0b6407d30842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d16e0b6407d30842",
            "map_public_ip_on_launch": false,
            "owner_id": "848607490931",
            "tags": {
              "Name": "alpha_public_subnet",
              "Provisioner": "terraform"
            },
            "vpc_id": "vpc-014507b01d77faed1"
          },
          "dependencies": [
            "module.vpc_networking.aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alpha_vpc",
      "provider": "module.vpc_networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848607490931:vpc/vpc-014507b01d77faed1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03da519df6a41399a",
            "default_route_table_id": "rtb-02b8cedc5918bc144",
            "default_security_group_id": "sg-00ff173a87c52add7",
            "dhcp_options_id": "dopt-8e026ae8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-014507b01d77faed1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b8cedc5918bc144",
            "owner_id": "848607490931",
            "tags": {
              "Name": "alpha_vpc",
              "Provisioner": "terraform"
            }
          }
        }
      ]
    }
  ]
}